# clean-rest-api

./: Cargo.toml
api/: Cargo.toml  log4rs.yml
api/src/: main.rs
src/: main.rs
src/web/: mod.rs
