[package]
name = "rest-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.7"
log = "0.4.25"
log4rs = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }

