[workspace]
members = ["api", "core", "db", "ml"]


[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.7"
serde_json = "1.0"
log = "0.4"
log4rs = "1.0"
anyhow = "1.0"
thiserror = "1.0"
